acho q agora ta perfeito